welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:12: error: not found: value bBiscuit
    gauche();bBiscuit=0
             ^